# rekindle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: publish.yml
crates/rekindle-client/: Cargo.toml
crates/rekindle-client/src/: adapter_v1.rs  handoff.rs  lib.rs
crates/rekindle-client/tests/: public_surface.rs
crates/rekindle-client/tests/ui/fail/: application_id_lifetime.rs  callback_restore_lifetime.rs  callback_schema.rs  callback_snapshot.rs  client_error_exhaustive.rs  desktop_module_without_feature.rs  duplicate_public_name.rs  extra_field.rs  future_not_send.rs  handoff_error_exhaustive.rs  handoff_lifetime.rs  handoff_not_send_sync.rs  missing_field.rs  web_module_without_feature.rs
crates/rekindle-client/tests/ui/pass/: public_surface.rs
crates/rekindle-toolchain/: Cargo.toml
crates/rekindle-toolchain/src/: exec.rs  frame.rs  guardian.rs  main.rs  web.rs
guides/deployment/: production-builds.md
guides/features/: configuration.md  desktop-target.md  development.md  integrations.md  web-target.md
guides/introduction/: getting-started.md  how-rekindle-works.md
guides/reference/: cli.cheatmd  troubleshooting.md
lib/: rekindle.ex
lib/rekindle/: admitted_seal.ex  application.ex  artifact_store.ex  backend_context.ex  build.ex  build_facade.ex  build_graph.ex  build_result.ex  canonical_value.ex  cargo.ex  client_generator.ex  command.ex  config.ex  config_error.ex  diagnostic.ex  doctor.ex  event.ex  event_bus.ex  execution_result.ex  external_artifact.ex  external_plan.ex  failure.ex  generation_ref.ex  igniter.ex  install.ex  install_verify_result.ex  integration.ex  phoenix.ex  process_runner.ex  product_language.ex  project_session.ex  project_supervisor.ex  qualified_path.ex  redactor.ex  reload_plan.ex  runtime_state.ex  scheduler.ex  setup.ex  shutdown.ex  support_level.ex  (+3 more)
test/: rekindle_test.exs  test_helper.exs
test/fixtures/cargo_backend/: Cargo.toml
test/fixtures/cargo_backend/shared/: Cargo.toml
test/fixtures/cargo_backend/shared/src/: lib.rs
test/integration/: admitted_seal_test.exs  artifact_store_test.exs  cargo_backend_test.exs  desktop_build_test.exs  development_test.exs  install_test.exs  integrations_test.exs  process_runner_test.exs  release_test.exs  setup_task_test.exs  shutdown_test.exs  state_handoff_test.exs  target_backend_executor_test.exs  toolchain_helper_test.exs  tooling_test.exs  web_build_test.exs
test/rekindle/: admitted_seal_static_test.exs  application_test.exs  build_facade_static_test.exs  build_facade_test.exs  build_graph_test.exs  build_task_test.exs  build_test.exs  canonical_value_test.exs  cargo_test.exs  client_generator_test.exs  command_test.exs  config_error_test.exs  config_test.exs  config_typespec_test.exs  diagnostic_test.exs  event_test.exs  failure_test.exs  igniter_test.exs  install_verify_result_test.exs  phoenix_test.exs  process_runner_test.exs  product_language_test.exs  (+12 more)
(+111 files in other folders)
