[package]
name = "rekindle-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false
description = "Target startup and portable state handoff facade for Rekindle GPUI clients."

[features]
default = []
web = ["dep:gpui"]
desktop = ["dep:gpui"]
state-handoff = ["dep:futures-util", "dep:sha2"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "18f35ffac2da72ccdfb0e1bf756218fa1995162b", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
futures-executor = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
