[package]
name = "rekindle-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false
description = "Target startup and portable state handoff facade for Rekindle clients."

[features]
default = []
web = []
desktop = []
state-handoff = ["dep:futures-util", "dep:sha2"]

[dependencies]
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
futures-executor = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
