[package]
name = "rekindle-toolchain"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "rekindle_toolchain"
path = "src/main.rs"

[dependencies]
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23.1"
walkdir = "2"
wasm-bindgen-cli-support = "=0.2.121"
